INTRO TEXT

Additions:
 - Discord rich presence will also show battle details.

Changes:
 - Increased initial levels of Player 3 from 3 → 4 and Player 4 from 4 → 5.
 - Swapped Foresight and Offensive Stance learn levels.

Bug Fixes:
 - Fixed EXP Suppressor hiding party members from victory screen.
 - Fixed a bug where the screenshot folder wouldn't open if a screenshot hadn't been taken yet.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                             ALPHA 15.1 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 15.1 (2/4/2025)
Current Level Cap: 25
- - - - - - - - - - - - -
Here's a quick hotfix, only a day after Alpha 15's release! Yeah, it turns out there was a bug that prevented any progress past the Mini Green Slime... oops.

Additions:
 - More screenshot-related features:
  ~ Pressing P takes a screenshot; before it only worked with PRINTSCREEN. This can be rebound in the options menu.
  ~ The screenshot folder can be accessed via the title screen.
  ~ Screenshots will now also hide the time indicator.

Changes:
 - Infernal Coin also applies fire elemental rates.
 - On Fire! and Burning Up! take increased damage from Water/Earth/Wind attacks, and the fire will be put out.

Bug Fixes:
 - Fixed a game-breaking crash that prevented progress past the Mini Green Slime.
 - Fixed levels not actually capping at 25.
 - Fixed quest window not hiding during screenshots if an event is running.
 - Fixed buggy Time Indicator option.
 - Fixed a bug where holding down the interact key to speed up Player 1's piano playing would interrupt him.
 - Fixed a tutorial tip appearing that should be impossible to see.
 - Fixed some issues with the secret boss (and made a few improvements while I was at it).

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                              ALPHA 15 CHANGELOG