@@ -1711,19 +1711,85 @@
             ]
           },
           {
+            "code": 121,
+            "indent": 0,
+            "parameters": [
+              21,
+              21,
+              1
+            ]
+          },
+          {
             "code": 111,
             "indent": 0,
             "parameters": [
               0,
               22,
-              0
+              1
             ]
           },
           {
-            "code": 119,
+            "code": 101,
             "indent": 1,
             "parameters": [
-              "skip"
+              "",
+              0,
+              0,
+              2
+            ]
+          },
+          {
+            "code": 401,
+            "indent": 1,
+            "parameters": [
+              "Your souls resonate with a strength born"
+            ]
+          },
+          {
+            "code": 401,
+            "indent": 1,
+            "parameters": [
+              "out of your desire to slay Laeryidyean..."
+            ]
+          },
+          {
+            "code": 101,
+            "indent": 1,
+            "parameters": [
+              "",
+              0,
+              0,
+              2
+            ]
+          },
+          {
+            "code": 401,
+            "indent": 1,
+            "parameters": [
+              "You can now use TP! Gain TP via various"
+            ]
+          },
+          {
+            "code": 401,
+            "indent": 1,
+            "parameters": [
+              "actions in battle, and unleash super"
+            ]
+          },
+          {
+            "code": 401,
+            "indent": 1,
+            "parameters": [
+              "powerful skills using stored TP!"
+            ]
+          },
+          {
+            "code": 121,
+            "indent": 1,
+            "parameters": [
+              22,
+              22,
+              0
             ]
           },
           {
@@ -1735,77 +1801,6 @@
             "code": 412,
             "indent": 0,
             "parameters": []
-          },
-          {
-            "code": 101,
-            "indent": 0,
-            "parameters": [
-              "",
-              0,
-              0,
-              2
-            ]
-          },
-          {
-            "code": 401,
-            "indent": 0,
-            "parameters": [
-              "Your souls resonate with a strength born"
-            ]
-          },
-          {
-            "code": 401,
-            "indent": 0,
-            "parameters": [
-              "out of your desire to slay Laeryidyean..."
-            ]
-          },
-          {
-            "code": 101,
-            "indent": 0,
-            "parameters": [
-              "",
-              0,
-              0,
-              2
-            ]
-          },
-          {
-            "code": 401,
-            "indent": 0,
-            "parameters": [
-              "You can now use TP! Gain TP via various"
-            ]
-          },
-          {
-            "code": 401,
-            "indent": 0,
-            "parameters": [
-              "actions in battle, and unleash super"
-            ]
-          },
-          {
-            "code": 401,
-            "indent": 0,
-            "parameters": [
-              "powerful skills using stored TP!"
-            ]
-          },
-          {
-            "code": 121,
-            "indent": 0,
-            "parameters": [
-              22,
-              22,
-              0
-            ]
-          },
-          {
-            "code": 118,
-            "indent": 0,
-            "parameters": [
-              "skip"
-            ]
           },
           {
             "code": 0,
@@ -10800,6 +10795,15 @@
               0,
               0,
               24
+            ]
+          },
+          {
+            "code": 121,
+            "indent": 0,
+            "parameters": [
+              110,
+              110,
+              1
             ]
           },
           {
