@@ -16,6 +16,7 @@ Changes:
 Bug Fixes:
  - Fixed EXP Suppressor hiding party members from victory screen.
  - Fixed a bug where the screenshot folder wouldn't open if a screenshot hadn't been taken yet.
+ - Fixed a bug related to Laeryidyean's first darkfire.
 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                              ALPHA 15.1 CHANGELOG
